# End-to-End-Machine-Learning-Project-using-Mlops

./: README.md  main.py  pyproject.toml  requirements.txt
analysis/: EDA.ipynb
src/: ingest_data.py
