[project]
name = "end-to-end-machine-learning-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.3",
    "matplotlib==3.7.5",
    "mlflow==2.15.1",
    "mlflow-skinny==2.15.1",
    "numpy>=1.26.0",
    "pandas==2.0.3",
    "scikit-learn==1.3.2",
    "seaborn==0.13.2",
    "statsmodels==0.14.1",
    "zenml>=0.64.0",
]
